# QWen3Infer

./: .gitignore  CMakeLists.txt  hello.cu  main.py  pyproject.toml
onnx_optimizer/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  utils.py
onnx_optimizer/exporter/: __init__.py  base.py  split_exporter.py
onnx_optimizer/fusion/: __init__.py  base.py  config_loader.py  graph_matcher.py  graph_replacer.py  pass_manager.py
onnx_optimizer/fusion/configs/: o1_basic.yaml  o2_aggressive.yaml  o3_custom.yaml
onnx_optimizer/graph_optimizer/: __init__.py  base.py  pipeline.py
onnx_optimizer/graph_optimizer/passes/: __init__.py  constant_folding.py  dead_code_elimination.py  identity_removal.py  input_statication.py
onnx_optimizer/quantizer/: __init__.py  base.py  fp16_converter.py  int8_dynamic.py  int8_group_max.py  registry.py
onnx_optimizer/verifier/: __init__.py  base.py  model_verifier.py
scripts/export_qwen3/: check_data.py  convert_i8.py  export_onnx_optimum.py  post_process_onnx.py  verify_int8.py
src/include/base/: alloc.h  buffer.h  context.h  library.h  type_extension.hpp
src/include/ops/: elementwise.h  fill.h  layer.h  ops.h  reduction.h  rsmnorm.h
src/include/tensor/: function.h  tensorbase.h
src/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cuda.cpp  buffer.cpp  layer.cpp  library.cu
src/source/ops/: elementwise.cpp  fill.cpp  kernels_interface.hpp  layer.cpp  reduction.cpp  rsmnorm.cpp
src/source/ops/kernel/: kernels_interface.hpp
src/source/ops/kernel/device/: elementwise.cu  elementwise.cuh  fill.cu  fill.cuh  math.cuh  reduction.cu  reduction.cuh  rsmnorm.cu  rsmnorm.cuh
src/source/ops/kernel/host/: elementwise.hpp  fill.hpp  reduction.hpp  rsmnorm.hpp
src/source/tensor/: function.cpp  tensorbase.cpp
test/test_base/: test_buffer.cpp  test_status.cpp
test/test_ops/: test_elementwise.cpp  test_fill.cpp  test_reduction.cpp  test_rsmnorm.cpp
test/test_tensor/: test_function.cpp  test_tensorbase.cpp
