[project]
name = "qwen3infer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "click>=8.3.1",
    "convdog[cuda]>=0.1.4",
    "onnx>=1.18.0",
    "onnx-graphsurgeon>=0.5.8",
    "onnxscript>=0.6.2",
    "optimum[onnx]>=2.1.0",
    "pybind11>=3.0.2",
    "rich>=14.3.3",
    "safetensors>=0.7.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers<5.0.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[tool.setuptools.packages.find]
include = ["onnx_optimizer*"]

[project.scripts]
onnx-sim = "onnx_optimizer.cli:main"
